new blog posts.

--- a/etc-.html
+++ b/etc-.html
@@ -73,20 +73,20 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html"><i class="fa fa-check"></i>Machine, Math, and Me</a>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
 <ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current"><i class="fa fa-check"></i>Current</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past"><i class="fa fa-check"></i>Past</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
@@ -132,9 +132,10 @@
 <h1>Etc.</h1>
 <p><a href="https://www.gocomics.com/sarahs-scribbles/2014/1/17"><img src="images/books.gif" width="250px" class="right" /></a></p>
 <p>Fun for me is <a href="./blog/art/books/index.html">reading books</a> and writing on <a href="./blog">my blog</a> about random
-things. I love to design websites like this one, and my blog's theme
-using <a href="https://gohugo.io/">Hugo</a>. I have also started a couple of wikis for dumping <a href="https://github.com/apurvnakade/math-education/wiki">math-ed
-resources</a> and <a href="https://github.com/apurvanakade/apurvanakade.github.io/wiki">computer hacks</a>. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.</p>
+things. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.</p>
+<p>I love to design websites like this one, and <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
+using <a href="https://gohugo.io/">Hugo</a>. I have also started a couple of wikis for dumping <a href="https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde">math-ed
+resources</a> and <a href="https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d">computer hacks</a>.</p>
 <p>In a past life I was involved with and highly recommend the following:</p>
 <ul>
 <li>London, ON
