--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 
-<link rel="next" href="machine-math-and-me.html"/>
+<link rel="next" href="me-math-machine.html"/>
 <script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -73,20 +73,20 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html"><i class="fa fa-check"></i>Machine, Math, and Me</a>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
 <ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current"><i class="fa fa-check"></i>Current</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past"><i class="fa fa-check"></i>Past</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
@@ -176,7 +176,7 @@ it more accessible and equitable.</p>
         </div>
       </div>
 
-<a href="machine-math-and-me.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="me-math-machine.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
