--- a/teaching.html
+++ b/teaching.html
@@ -73,20 +73,20 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html"><i class="fa fa-check"></i>Machine, Math, and Me</a>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
-<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
 <ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current"><i class="fa fa-check"></i>Current</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past"><i class="fa fa-check"></i>Past</a>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
@@ -235,7 +235,7 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 <li><a href="https://drive.google.com/drive/folders/19GanFw6odpL4tRUJa-mPsVmVKcK52jaW?usp=sharing">Geometry of Dirac Operators</a></li>
 <li><a href="https://drive.google.com/drive/folders/1OyE4ADuxnFIJ3-wuEifCNYWcCF2-iiRd?usp=sharing">Finite Group Gauge Theory</a></li>
 <li><a href="https://drive.google.com/drive/folders/1lkx7z7ht5XuRAhhKnhVgLiPHJ2GLSrT3?usp=sharing">FIOs and Lagrangian Submanifolds</a></li>
-<li><a href="https://drive.google.com/file/d/15SwA8TDmLUMElPQYvhMcIAttXgNzuKbz/view?usp=sharing">Lie Groups</a></li>
+<li>[Classical Lie Groups]</li>
 <li><a href="https://drive.google.com/file/d/1kFh_-_DmR4wt-sDBiOggM5a5U-5W7V_l/view?usp=sharing">Connections on Principal Bundles and Classical Electromagnetism</a></li>
 </ul>
 </div>
@@ -355,7 +355,7 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 </tbody>
 </table>
 </div>
-<p>Course websites: <a href="https://drive.google.com/drive/folders/1HFqAhHYG4m_BtwQSXGeSyItFt1xBHtWE?usp=sharing">Calc '19</a>, <a href="https://drive.google.com/drive/folders/1MkXy0CPOKqSJANr9QSD4gwYdMYjVcdmV?usp=sharing">Calc '20</a>, <a href="https://drive.google.com/drive/folders/1_lSraXoUwk7CmStg23T1nHpYvf9zq9jA?usp=sharing">DiffEq '17</a>, <a href="https://drive.google.com/drive/folders/199dY1MF3TWhJ6gUKQyPf_7YK6rO36HZc?usp=sharing">Calc '16</a>, <a href="https://drive.google.com/drive/folders/1X7WKPhBljbXt6dBt278t2lKUlWUKIU5Z?usp=sharing">DiffEq '15</a>.</p>
+<p>Course websites: <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKkdSQB2tVu_KcYMWhZpK19J">Calc '19</a>, <a href="https://drive.google.com/drive/folders/1MkXy0CPOKqSJANr9QSD4gwYdMYjVcdmV?usp=sharing">Calc '20</a>, <a href="https://drive.google.com/drive/folders/1_lSraXoUwk7CmStg23T1nHpYvf9zq9jA?usp=sharing">DiffEq '17</a>, <a href="https://drive.google.com/drive/folders/199dY1MF3TWhJ6gUKQyPf_7YK6rO36HZc?usp=sharing">Calc '16</a>, <a href="https://drive.google.com/drive/folders/1X7WKPhBljbXt6dBt278t2lKUlWUKIU5Z?usp=sharing">DiffEq '15</a>.</p>
 <div id="calculus-ii-for-mathematical-and-physical-sciences-uwo-winter-2020" class="section level4">
 <h4>Calculus II for Mathematical and Physical Sciences (UWO, Winter 2020)</h4>
 <p>was a full semester 4 credit course with more than 300 students divided into 2 sections. I was the instructor for one of the sections and was solely responsible for making weekly WebWork homeworks and making exams along with the course coordinator. The class regularly met for 4 hours every week.</p>
