--- a/teaching.html
+++ b/teaching.html
@@ -49,13 +49,25 @@
 
 
 
+<!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-
+<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-table.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-search.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-fontsettings.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-clipboard.css" rel="stylesheet" />
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/images.css" type="text/css" />
 <link rel="stylesheet" href="css/toc.css" type="text/css" />
+
+<!-- end header file -->
+
+
+
 </head>
 
 <body>
@@ -122,6 +134,7 @@
             <section class="normal" id="section-">
 <div id="teaching" class="section level1">
 <h1>Teaching</h1>
+<p>This page contains several notes from the various courses and projects I’ve taken, taught, or mentored.</p>
 <div id="directed-reading-program" class="section level2">
 <h2>Directed Reading Program</h2>
 <p>The Directed Reading Program is a program for undergrads and grad students/postdocs.
@@ -227,7 +240,7 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 <li><a href="https://drive.google.com/drive/folders/19GanFw6odpL4tRUJa-mPsVmVKcK52jaW?usp=sharing">Geometry of Dirac Operators</a></li>
 <li><a href="https://drive.google.com/drive/folders/1OyE4ADuxnFIJ3-wuEifCNYWcCF2-iiRd?usp=sharing">Finite Group Gauge Theory</a></li>
 <li><a href="https://drive.google.com/drive/folders/1lkx7z7ht5XuRAhhKnhVgLiPHJ2GLSrT3?usp=sharing">FIOs and Lagrangian Submanifolds</a></li>
-<li>[Classical Lie Groups]</li>
+<li><a href="https://drive.google.com/file/d/15SwA8TDmLUMElPQYvhMcIAttXgNzuKbz/view?usp=sharing">Classical Lie Groups</a></li>
 <li><a href="https://drive.google.com/file/d/1kFh_-_DmR4wt-sDBiOggM5a5U-5W7V_l/view?usp=sharing">Connections on Principal Bundles and Classical Electromagnetism</a></li>
 </ul>
 </div>
