--- a/me-math-machine.html
+++ b/me-math-machine.html
@@ -49,13 +49,25 @@
 
 
 
+<!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-
+<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-table.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-search.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-fontsettings.css" rel="stylesheet" />
+<link href="css/gitbook/plugin-clipboard.css" rel="stylesheet" />
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/images.css" type="text/css" />
 <link rel="stylesheet" href="css/toc.css" type="text/css" />
+
+<!-- end header file -->
+
+
+
 </head>
 
 <body>
@@ -154,6 +166,7 @@ And so, I taught a course <a href="courses/lean_at_MC2020/index.html">Lean at MC
 <li><a href="https://leanprover-community.github.io/sphere-eversion/blueprint/sect0001.html">The sphere eversion project</a></li>
 <li><a href="https://github.com/TwoFX/sudoku">Sudoku in Lean</a></li>
 </ul>
+<p>If you wish to learn some Lean or already know Lean and would like to discuss/do a project, feel free to email with me.</p>
 
 </div>
 </div>
