--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="math-projects.html"/>
 <link rel="next" href="etc-.html"/>
+<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -62,7 +63,7 @@
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/images.css" type="text/css" />
-<link rel="stylesheet" href="css/toc.css" type="text/css" />
+<!-- <link rel="stylesheet" href="css/toc.css" type="text/css" /> -->
 
 <!-- end header file -->
 
@@ -80,29 +81,32 @@
       <nav role="navigation">
 
 <ul class="summary">
-<p> &nbsp; </p>
-
-<li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a><ul>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
+<ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a><ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a><ul>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a><ul>
+<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a><ul>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
+<ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a><ul>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
+<ul>
 <li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
