--- a/html/header.html
+++ b/html/header.html
@@ -11,6 +11,6 @@
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/images.css" type="text/css" />
-<link rel="stylesheet" href="css/toc.css" type="text/css" />
+<!-- <link rel="stylesheet" href="css/toc.css" type="text/css" /> -->
 
 <!-- end header file -->
