--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,7 @@
 <!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/style.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-table.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
